Revision history for perl distribution Convos

6.43 Not Released
 - Add support for quotes around **bold**
 - Add is_true() function to check boolean environment variables
  for "0", "Off", "No", "false", "1", "On", "Yes" or "true".
 - Setting CONVOS_SYSLOG=1 will disable logging to file
 - Stop replacing " (quote) with &quot;

6.42 2021-12-21T10:00:00+0900
 - Fix resetting reconnect delay when manually updating connection settings
 - Fix not changing wanted state to "disconnected" when updating connection settings
 - Fix double line breaks inside <pre> in the CMS by changing to Text::Markdown::Hoedown
 - Fix not adding space before channel name links
 - Avoid making #123 turn into channel links, since they are often pull request numbers

6.41 2021-12-18T14:58:00+0900
 - Add support for CONVOS_ACCESS_LOG (EXPERIMENTAL)
   https://github.com/jhthorsen/mojolicious-plugin-syslog#register
 - Add support for CONVOS_SYSLOG (EXPERIMENTAL)

6.40 2021-12-13T22:32:00+0900
 - Add clear search button #631
 - Add CSRF-check to /logout #632
   Contributors: Devendra Bhatla and Jamie Slome

6.39 2021-11-27T08:50:00+0900
 - Add file management to frontend #426
 - Add GET /files endpoint #426
 - Add DELETE /files/:uid/:fid endpoint #426

6.38 2021-11-26T08:46:00+0900
 - Use Crypt::Passphrase for password hashing #627
   Contributor: Stig Palmquist
 - Converted file upload into a core feature
 - Changed "/file" API endpoint to "/files"
 - Removed back compat /paste/:email_hash/:file_hash URL
 - Using "npm" (instead of "pnpm") to install node modules

6.37 2021-10-19T20:06:00+0900
 - Fix not having to enable and then disable notifications to disable notifications

6.36 2021-10-19T11:52:00+0900
 - Using convos/convos:base as base image to fix builds #624

6.35 2021-10-18T23:27:00+0900
 - Bumped Alpine version to 3.14
 - Fix "ReferenceError: body is not defined" #625

6.34 2021-10-18T11:00:00+0900
 - Going to build docker "stable" and "vX.XX" as linux/amd64 and linux/arm64,